@@ -1,3 +1,9 @@
+2002-09-30  Jon Schewe  <jpschewe@mtu.net>
+
+	* src/net/mtu/eggplant/util/BasicFileFilter.java: Modified accept
+	to allow directories to be selected.  This allows one to traverse
+	through directories. 
+
 2002-08-25  Jon Schewe  <jpschewe@mtu.net>
 	
 	* Release 0.2
